# Automate

./: README.md  start.sh
Automate/: CMakeLists.txt  package.xml
Automate/config/: params.yaml
Automate/include/Automate/: MapTF.h  Odometry.h  StaticTF.h
Automate/launch/: launch.py
Automate/src/: MapTF.cpp  Odometry.cpp  StaticTF.cpp
Navigation/: CMakeLists.txt  package.xml
Navigation/config/: params.yaml  waypoints.yaml
Navigation/include/Navigation/: GlobalPlanner.h  LocalCostmap.h  LocalPlanner.h  OccupancyGrid.h
Navigation/launch/: launch.py
Navigation/src/: GlobalPlanner.cpp  LocalCostmap.cpp  LocalPlanner.cpp  OccupancyGrid.cpp
